data/derived/fa15/progs/unify/prog2188.ml.out
Characters 156-172:
  in wwhile((go, isFPoint b), b);;
            ^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
